<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Arrancar">Jugar</string>
    <string name="Configurar">Configurar</string>
    <string name="Acercade">Acerca de </string>
    <string name="Puntuaciones">Puntuaciones</string>
    <string name="tituloAplicacion">Asteroides</string>
    <string name="hello">Hello World, Asteroides! </string>
    <string name="app_name">Asteroides</string>
    <string name="action_settings">Configuracion</string>
    <string name="Salir">Salir</string>
    <string name="textoAcercaDe">"Este programa ha sido desarrollado como ejemplo en el curso de Android para demostrar cómo se pueden lanzar nuevas actividades desde la actividad principal."</string>
	<string name="NoPuntuaciones">"No hay puntuaciones"</string>
	<string name="ReproducirMusica">"Reproducir música"</string>
	<string name="TipoGraficos">"Tipo de gráficos"</string>
	<string name="NumeroFragmentos">"Número de Fragmentos"</string>
	<string name="MusicaSummary">"Se reproduce música de fondo"</string>
	<string name="GraficosSummary">"Se escoge la representación de gráficos"</string>
	<string name="FragmentosSummary">"En cuantos trozos se divide un asteroide"</string>
	<string name="AlmacenamientosValores">"Tipos de almacenamientos"</string>
	<string name="AlmacenamientosSummary">"Se escoge la forma de almacenar los datos"</string>
</resources>